# ocaml-flake-example

./: .gitignore  .ocamlformat  LICENSE  README.md  dune-project  flake.nix  hello.opam  index.html
.github/workflows/: cd.yml  ci.yml
hello/: index.html
hello/Hello/: index.html
lib/: dune  hello.ml  hello.mli  index.mld
opam/: hello.opam
test/: dune  run.t  say_hello.ml
